# yt-downloader

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260627_0001_create_download_tables.py  20260628_0002_update_audio_policy_fields.py  20260628_0003_add_download_job_heartbeat.py  20260705_0004_add_requested_filename.py  20260706_0005_add_download_batches.py  20260712_0006_add_auth_profiles_sessions.py
backend/src/yt_downloader_api/: main.py
backend/src/yt_downloader_api/admin/: __init__.py  create_user.py  grant_profile.py  import_profiles.py
backend/src/yt_downloader_api/api/: dependencies.py
backend/src/yt_downloader_api/core/: config.py
backend/src/yt_downloader_api/db/: session.py
backend/src/yt_downloader_api/downloaders/: base.py  yt_dlp_downloader.py
backend/src/yt_downloader_api/models/: profiles.py
backend/src/yt_downloader_api/repositories/: download_jobs.py  download_queue.py
backend/src/yt_downloader_api/services/: audio_operations.py  auth.py  db_profiles.py  download_execution.py  download_queue.py  download_state.py  downloads.py  filenames.py  (+5 more)
backend/tests/: conftest.py  test_audio_operations.py  test_auth.py  test_database.py  test_download_execution.py  test_download_queries.py  test_download_queue.py  test_downloads.py  test_health.py  test_library_exclusions_and_search.py  test_migrations.py  test_profile_directories.py  test_profile_entries.py  test_profile_entry_move.py  test_profile_entry_rename.py  test_profile_entry_trash.py  test_profiles.py
(+49 files in other folders)
