[project]
name = "yt-downloader-api"
version = "0.1.0"
description = "FastAPI backend for yt-downloader."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.115.0",
    "pymysql>=1.1.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.34.0",
    "yt-dlp>=2025.12.8",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_downloader_api"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
